# rust-actix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: error.rs  main.rs  prelude.rs
src/api/: item_api.rs  mod.rs  todo_api.rs  user_api.rs
src/model/: item_model.rs  mod.rs  todo_model.rs  user_model.rs
src/repository/: mod.rs  surrealdb_repo.rs
src/utils/: macros.rs  mod.rs
surreal.db/: IDENTITY  LOG  LOG.old.1688930197943312
