[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "=1.0.0-beta.8"
actix-web = "4"
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
dotenv = "0.15.0"
futures = "0.3"
thiserror = "1"