[package]
name = "actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "=1.0.0-beta.9+20230402"
actix-web = { version = "4.8.0", features = ["rustls"] }
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.122"
dotenv = "0.15.0"
futures = "0.3"
thiserror = "1"
env_logger = "0.11.3"